force-app/main/default/objects/Shipment__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Nombre de la empresa de logística que gestiona el transporte (ej. SEUR, DHL, UPS).</description>
    <inlineHelpText>Agencia de transportes encargada de la distribución física de la mercancía.</inlineHelpText>
    <label>Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>