force-app/main/default/objects/Shipment__c/fields/Label_URL__c.field-meta.xml
<CustomField>
    <fullName>Label_URL__c</fullName>
    <description>Enlace directo al servidor externo para descargar e imprimir la etiqueta del paquete en formato ZPL o PDF.</description>
    <inlineHelpText>Enlace oficial de la etiqueta de envío lista para su impresión en el muelle de carga.</inlineHelpText>
    <label>Label URL</label>
    <type>Url</type>
</CustomField>