force-app/main/default/objects/Shipment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Enlace maestro-detalle obligatorio que une cada paquete físico expedido con su pedido comercial de origen.</description>
    <inlineHelpText>Pedido asociado a esta expedición.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>