force-app/main/default/objects/Shipment__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Código único de rastreo devuelto por el transportista a través de la API externa.</description>
    <inlineHelpText>Número de tracking asignado por la agencia de transporte para realizar el seguimiento del paquete.</inlineHelpText>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>